# stg-service-lib

./: Dockerfile  docker-compose.yml  main.py  minio_pool.py  process_data.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
src/stg_service_lib/: __init__.py  configuration.py  core.py  custom_types.py  exceptions.py  minio_pool.py  process_data.py  storage.py
